# tangram

./: .gitignore  LICENSE  README.md  _all_tests.sh  _run.sh  colors.py  coord.py  gen.py  gen_template.html  img_proc.py  index_template.html  main.py  main_test.py
analyzer/: README.md  _all.sh  _gen.sh  _sample.sh  colors.py  coord.py  gen.py  gen_template.html  img_proc.py  index_template.html  main.py  pieces_stats.py
blender/: tangram.blend
godot/Assets/: PieceHR.glb  PieceI1.glb  PieceJ1.glb  PieceL1.glb  PieceW1.glb
godot/Tangram/: .gitignore  README.md  export_presets.cfg  icon.svg.import  project.godot
godot/Tangram/Assets/: Board.tscn  ColorB.tres  ColorO.tres  ColorR.tres  ColorW.tres  ColorY.tres  PieceHR.tscn  PieceI1.tscn  PieceJ1.tscn  PieceL1.tscn  PieceP1.tscn  PieceTO.tscn  (+38 more)
godot/Tangram2d/: icon.svg.import  project.godot
rgen/: .gitignore  Cargo.toml  README.md
rgen/src/: board.rs  coord.rs  gen.rs  macros.rs  main.rs  permutations.rs  piece.rs  pieces.rs  rgen.rs  solutions.rs
viewer/: .gitignore  README.md  _build.sh  eslint.config.js  index.html  package-lock.json  package.json
viewer/public/: analyzer.json  data.txt  generator.txt  index.json
viewer/src/: App.tsx  BoardImage.tsx  GitBuild.tsx  TangramTable.tsx  TangramViewer.tsx  Title.tsx  index.css
viewer/temp/: _extract_gen.txt
web/: .gitignore  README.md  _build.sh  index.html  package-lock.json  package.json  vite.config.ts
web/public/: analyzer.json  pieces_stats.json
web/src/: App.tsx  AppHeader.tsx  GitBuild.tsx  LazyImage.tsx  SimpleCache.ts  index.css  main.tsx
(+39 files in other folders)
