[package]
name = "rgen"
version = "0.1.0"
# Our Debian stable requirement is rustc 1.63, which is ~2021
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# once_cell 1.21+ requires rustc 1.65+ or 1.70+
once_cell = "=1.20.3"
