[package]
name = "rgen"
version = "0.1.0"
# Our Debian stable requirement is rustc 1.63, which is ~2021
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
indexmap = "2.9.0"
itertools = "0.14.0"
